add oauth2 resource server security configuration

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,15 @@
+server:
+  port: 8081
+
 spring:
   application:
     name: ticket-service
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080
 
 db-service:
   url: http://localhost:8082
