comment out security config

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,11 +5,11 @@ spring:
   application:
     name: ticket-service
 
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: ${ISSUER_URI:http://localhost:8080}
+#  security:
+#    oauth2:
+#      resourceserver:
+#        jwt:
+#          issuer-uri: ${ISSUER_URI:http://localhost:8080}
 
 db-service:
   url: ${DB_SERVICE_URL:http://localhost:8082}
